--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+table{
+  width:90%;
+  box-shadow: :3px 3px 3px #ddd;
+}
+td{
+  padding:1%;
+}
+tr:nth-child(even){
+background: #ddd;
+
+}
 header{
   background: yellow;
   color:000;
@@ -17,13 +28,22 @@ header{
     border:1px solid #ddd;
     padding: 1%;
     margin: 1%;
+    box-shadow: 3px 3px 3px #ddd;
   }
+  img{
+  width: 150px;
+  height: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
   .child2
   {
     width:70%;
     border:1px solid #ddd;
     padding: 1%;
     margin: 1%;
+    box-shadow: 3px 3px 3px #ddd;
   }
 .subDiv{
   width:33.3%;
